--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,61 +1,61 @@
 [
     {
-        "title": "Lorem ipsum dolor sit.",
+        "title": "Personal Website - 2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis maxime tempore, aliquam vero ut sit labore accusantium. Sequi reiciendis sint enim nihil? Blanditiis quaerat omnis repellat nostrum corporis assumenda pariatur!"
+        "description": "This projects consists of the development of my own personal website using JavaScript, HTML, and CSS. The website will be a portfolio of my work and will be used to showcase my skills and experience to potential employers."
     },
     {
-        "title": "Esse tempore cupiditate odio.",
+        "title": "Powering Through - 2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Consequatur nesciunt harum sint! Debitis distinctio maxime aut modi soluta a recusandae error eligendi, praesentium reprehenderit dolorum ducimus id veritatis necessitatibus nobis ullam expedita possimus repellat numquam magnam est. Rerum."
+        "description": "This projects consisted of analyzing data from power outages and identyfying the primary factoras that cause them to better predict power outages and minimize their impact. It also employed a binary classification model to aid with predictions and analysis."
     },
     {
-        "title": "Soluta fugiat recusandae illum!",
+        "title": "Visualizations Project 1 - 2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Perferendis commodi veniam laboriosam voluptatem quo delectus aperiam. Quas sint placeat sunt, magnam esse asperiores natus nihil deleniti autem impedit eius architecto tempora, soluta reprehenderit iste nemo at temporibus ex."
     },
     {
-        "title": "Maiores inventore nulla reprehenderit.",
+        "title": "Visualizations Project 2 - 2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Provident neque maiores dignissimos accusantium ab aspernatur, velit ducimus quas rem totam quos temporibus placeat fuga voluptatem? Minima nulla, assumenda voluptatum modi laudantium ex odio! Cumque facere repellat iusto rerum!"
     },
     {
-        "title": "Facilis nulla praesentium eaque!",
+        "title": "DSC 10 Project - 2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Voluptatem esse quas dolorem vero facilis tenetur sequi magni. Officiis cumque, dolore facilis, accusamus harum cupiditate, provident expedita rem repellendus labore atque voluptatibus magni id aliquam facere distinctio modi vitae."
     },
     {
-        "title": "Corporis illum expedita voluptatum.",
+        "title": "DSC 30 Project - 2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Porro ut architecto et veniam, vitae eaque ipsa necessitatibus. Odit vero accusamus quidem assumenda, voluptas molestiae laborum perferendis laboriosam. Harum odit aperiam doloremque illo repellendus, quidem ducimus sequi aut eos."
     },
     {
-        "title": "Nam ea ullam labore.",
+        "title": "DSC 20 Project - 2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Asperiores enim eius ab molestias repellendus! Expedita delectus ad quam qui repellendus sint repudiandae distinctio vero! Atque deserunt eaque, assumenda commodi cum hic debitis ea distinctio dolor rerum qui eius."
     },
     {
-        "title": "Esse inventore cum pariatur.",
+        "title": "Economic Analysis - 2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Dicta iste, rerum, aspernatur doloremque officiis harum consectetur dolorum repudiandae voluptas provident ea accusantium dignissimos odio illum error? Nobis aperiam voluptate ullam provident a velit placeat sed impedit fuga optio?"
     },
     {
-        "title": "Eveniet ratione assumenda nihil?",
+        "title": "Houston Real Estate Analysis - 2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Dolorum illo sunt quasi nulla exercitationem aliquid? Asperiores, odit soluta? Voluptatibus, at, itaque architecto beatae modi natus ullam rem eos incidunt consequuntur distinctio. Recusandae porro dicta, maiores iste doloribus explicabo?"
     },
     {
-        "title": "Dolore ipsam sit possimus.",
+        "title": "Infrastructure Finaning Model - 2021",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Incidunt animi libero voluptates ea harum officiis, odit, iure dolorem nulla nisi veritatis, veniam quo in nihil deserunt possimus fugiat. Cumque asperiores at distinctio nulla illum sequi. Corrupti, unde temporibus?"
     },
     {
-        "title": "Mollitia veritatis accusamus soluta?",
+        "title": "Physics Senior Project - 2021",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Adipisci provident, velit animi quia eum sapiente quae veritatis minus assumenda quisquam facere perspiciatis quos consequatur nostrum esse aliquam dignissimos sunt, quod dolorum cupiditate minima incidunt neque nemo consequuntur! Quibusdam."
     },
     {
-        "title": "Necessitatibus velit est aspernatur.",
+        "title": "Tesla DCF - 2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Perferendis ducimus nostrum culpa sapiente nam, pariatur natus veritatis id reiciendis ullam, fuga repellat repellendus odit quod, quam nulla nihil consequuntur. Reiciendis nisi quia adipisci praesentium suscipit nobis molestiae in."
     }
