--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,62 +1,74 @@
 [
     {
-        "title": "Personal Website - 2025",
+        "title": "Personal Website",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "This projects consists of the development of my own personal website using JavaScript, HTML, and CSS. The website will be a portfolio of my work and will be used to showcase my skills and experience to potential employers."
+        "description": "This projects consists of the development of my own personal website using JavaScript, HTML, and CSS. The website will be a portfolio of my work and will be used to showcase my skills and experience to potential employers.",
+        "year": "2025"
     },
     {
-        "title": "Powering Through - 2024",
+        "title": "Powering Through",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "This projects consisted of analyzing data from power outages and identyfying the primary factoras that cause them to better predict power outages and minimize their impact. It also employed a binary classification model to aid with predictions and analysis."
+        "description": "This projects consisted of analyzing data from power outages and identyfying the primary factoras that cause them to better predict power outages and minimize their impact. It also employed a binary classification model to aid with predictions and analysis.",
+        "year": "2024"
     },
     {
-        "title": "Visualizations Project 1 - 2025",
+        "title": "Visualizations Project 1",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Perferendis commodi veniam laboriosam voluptatem quo delectus aperiam. Quas sint placeat sunt, magnam esse asperiores natus nihil deleniti autem impedit eius architecto tempora, soluta reprehenderit iste nemo at temporibus ex."
+        "description": "Perferendis commodi veniam laboriosam voluptatem quo delectus aperiam. Quas sint placeat sunt, magnam esse asperiores natus nihil deleniti autem impedit eius architecto tempora, soluta reprehenderit iste nemo at temporibus ex.",
+        "year": "2025"
     },
     {
-        "title": "Visualizations Project 2 - 2025",
+        "title": "Visualizations Project 2",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Provident neque maiores dignissimos accusantium ab aspernatur, velit ducimus quas rem totam quos temporibus placeat fuga voluptatem? Minima nulla, assumenda voluptatum modi laudantium ex odio! Cumque facere repellat iusto rerum!"
+        "description": "Provident neque maiores dignissimos accusantium ab aspernatur, velit ducimus quas rem totam quos temporibus placeat fuga voluptatem? Minima nulla, assumenda voluptatum modi laudantium ex odio! Cumque facere repellat iusto rerum!",
+        "year": "2025"
     },
     {
-        "title": "DSC 10 Project - 2022",
+        "title": "DSC 10 Project",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Voluptatem esse quas dolorem vero facilis tenetur sequi magni. Officiis cumque, dolore facilis, accusamus harum cupiditate, provident expedita rem repellendus labore atque voluptatibus magni id aliquam facere distinctio modi vitae."
+        "description": "Voluptatem esse quas dolorem vero facilis tenetur sequi magni. Officiis cumque, dolore facilis, accusamus harum cupiditate, provident expedita rem repellendus labore atque voluptatibus magni id aliquam facere distinctio modi vitae.",
+        "year": "2022"
     },
     {
-        "title": "DSC 30 Project - 2023",
+        "title": "DSC 30 Project",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Porro ut architecto et veniam, vitae eaque ipsa necessitatibus. Odit vero accusamus quidem assumenda, voluptas molestiae laborum perferendis laboriosam. Harum odit aperiam doloremque illo repellendus, quidem ducimus sequi aut eos."
+        "description": "Porro ut architecto et veniam, vitae eaque ipsa necessitatibus. Odit vero accusamus quidem assumenda, voluptas molestiae laborum perferendis laboriosam. Harum odit aperiam doloremque illo repellendus, quidem ducimus sequi aut eos.",
+        "year": "2023"
     },
     {
-        "title": "DSC 20 Project - 2023",
+        "title": "DSC 20 Project",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Asperiores enim eius ab molestias repellendus! Expedita delectus ad quam qui repellendus sint repudiandae distinctio vero! Atque deserunt eaque, assumenda commodi cum hic debitis ea distinctio dolor rerum qui eius."
+        "description": "Asperiores enim eius ab molestias repellendus! Expedita delectus ad quam qui repellendus sint repudiandae distinctio vero! Atque deserunt eaque, assumenda commodi cum hic debitis ea distinctio dolor rerum qui eius.",
+        "year": "2023"
     },
     {
-        "title": "Economic Analysis - 2022",
+        "title": "Economic Analysis",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Dicta iste, rerum, aspernatur doloremque officiis harum consectetur dolorum repudiandae voluptas provident ea accusantium dignissimos odio illum error? Nobis aperiam voluptate ullam provident a velit placeat sed impedit fuga optio?"
+        "description": "Dicta iste, rerum, aspernatur doloremque officiis harum consectetur dolorum repudiandae voluptas provident ea accusantium dignissimos odio illum error? Nobis aperiam voluptate ullam provident a velit placeat sed impedit fuga optio?",
+        "year": "2022"
     },
     {
-        "title": "Houston Real Estate Analysis - 2023",
+        "title": "Houston Real Estate Analysis",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Dolorum illo sunt quasi nulla exercitationem aliquid? Asperiores, odit soluta? Voluptatibus, at, itaque architecto beatae modi natus ullam rem eos incidunt consequuntur distinctio. Recusandae porro dicta, maiores iste doloribus explicabo?"
+        "description": "Dolorum illo sunt quasi nulla exercitationem aliquid? Asperiores, odit soluta? Voluptatibus, at, itaque architecto beatae modi natus ullam rem eos incidunt consequuntur distinctio. Recusandae porro dicta, maiores iste doloribus explicabo?",
+        "year": "2023"
     },
     {
-        "title": "Infrastructure Finaning Model - 2021",
+        "title": "Infrastructure Finaning Model",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Incidunt animi libero voluptates ea harum officiis, odit, iure dolorem nulla nisi veritatis, veniam quo in nihil deserunt possimus fugiat. Cumque asperiores at distinctio nulla illum sequi. Corrupti, unde temporibus?"
+        "description": "Incidunt animi libero voluptates ea harum officiis, odit, iure dolorem nulla nisi veritatis, veniam quo in nihil deserunt possimus fugiat. Cumque asperiores at distinctio nulla illum sequi. Corrupti, unde temporibus?",
+        "year": "2021"
     },
     {
-        "title": "Physics Senior Project - 2021",
+        "title": "Physics Senior Project",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Adipisci provident, velit animi quia eum sapiente quae veritatis minus assumenda quisquam facere perspiciatis quos consequatur nostrum esse aliquam dignissimos sunt, quod dolorum cupiditate minima incidunt neque nemo consequuntur! Quibusdam."
+        "description": "Adipisci provident, velit animi quia eum sapiente quae veritatis minus assumenda quisquam facere perspiciatis quos consequatur nostrum esse aliquam dignissimos sunt, quod dolorum cupiditate minima incidunt neque nemo consequuntur! Quibusdam.",
+        "year": "2021"
     },
     {
-        "title": "Tesla DCF - 2023",
+        "title": "Tesla DCF",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Perferendis ducimus nostrum culpa sapiente nam, pariatur natus veritatis id reiciendis ullam, fuga repellat repellendus odit quod, quam nulla nihil consequuntur. Reiciendis nisi quia adipisci praesentium suscipit nobis molestiae in."
+        "description": "Perferendis ducimus nostrum culpa sapiente nam, pariatur natus veritatis id reiciendis ullam, fuga repellat repellendus odit quod, quam nulla nihil consequuntur. Reiciendis nisi quia adipisci praesentium suscipit nobis molestiae in.",
+        "year": "2023"
     }
 ]
